# elog-crawler

./: README.md  README_windows.md  pyproject.toml  setup.py
elog_crawler/: app_crawl_elog.py  app_crawl_file_manager.py  app_crawl_info.py  app_crawl_runtable.py  credential_store.py  save_to_db.py  update_db.py
utils/: vi_file_manager.py
