[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elog-crawler"
version = "24.09.02"
authors = [
    {name = "Cong Wang", email = "wangimagine@gmail.com"},
]
description = "An elog crawler."
readme = "README.md"
requires-python = ">=3.6"
keywords = ["LCLS", "eLog"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "selenium",
    "webdriver_manager",
    "humanfriendly",
    "pandas",
    "cryptography",
]

[project.urls]
Homepage = "https://github.com/carbonscott/elog-crawler"

[project.scripts]
elog-crawler-file-manager = "elog_crawler.app_crawl_file_manager:main"
elog-crawler-elog = "elog_crawler.app_crawl_elog:main"

[tool.setuptools]
packages = ["elog_crawler"]

[tool.setuptools.package-data]
elog_crawler = ["*"]
